Fix mobile gradient cutoff using background-size 100% 100%

--- a/CSS/Forside.css
+++ b/CSS/Forside.css
@@ -7,6 +7,7 @@
     background: radial-gradient(circle, #E63946, #090909);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     background-color: #090909;
     overflow-x: hidden;
   }
@@ -314,7 +315,7 @@ p{
   html {
     background: radial-gradient(circle, #E63946, #090909);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     background-color: #090909;
   }
 
