--- a/CSS/Galleri.css
+++ b/CSS/Galleri.css
@@ -4,9 +4,10 @@ body{
     }
 
     html {
-        background: radial-gradient(#E63946, #090909);
+        background: radial-gradient(circle, #E63946, #090909);
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
         background-color: #090909;
       }
 
@@ -267,7 +268,7 @@ body{
     html {
         background: radial-gradient(circle, #E63946, #090909);
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 100% 100%;
         background-color: #090909;
     }
     .kolonne1 img,
