--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -7,6 +7,7 @@ body{
         background: radial-gradient(circle, #E63946, #090909);
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
         background-color: #090909;
       }
 
@@ -225,7 +226,7 @@ body{
     html {
         background: radial-gradient(circle, #E63946, #090909);
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 100% 100%;
         background-color: #090909;
     }
      
