--- a/CSS/Prisliste.css
+++ b/CSS/Prisliste.css
@@ -8,6 +8,7 @@ body{
         background: radial-gradient(circle, #E63946, #090909);
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
         background-color: #090909;
       }
 
@@ -210,7 +211,7 @@ li{
     html {
         background: radial-gradient(circle, #E63946, #090909);
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 100% 100%;
         background-color: #090909;
     }
         /* Vis hamburger */
